--- a/app/css/main.css
+++ b/app/css/main.css
@@ -21,24 +21,50 @@
     border: 1px solid grey;
     border-radius: 4px;
     padding: 10px;
-    margin-top: 10px;
-
+    width: 400px;
     box-shadow: 0 0 10px rgba(0,0,0,0.5);
     background-color: white;
 }
-#screen{
+.screen{
     position:relative;
     display:inline-block;
-    padding-bottom: 10px;
 }
 
 #results{
     display: inline-block;
+    height: 240px;
+    width: 320px;
 }
 
 .userComponent{
     padding-top: 10px;
 }
-
+.container{
+    margin:0 auto;
+    width: 740px;
+    height: 100%;
+    border: 1px solid gray;
+    padding: 10px;
+    background-color: white;
+}
+#root{
+    min-height:100%
+}
+body{
+    background-color: #ecf0f1;
+}
+.image_block{
+    width:50%;
+    display:inline-block;
+    text-align:center;
+}
+video, img {
+    border: 1px solid black;
+    height: 240px;
+    width: 320px;
+}
+.employee{
+    border-bottom: 1px solid silver;
+}
 
 
